--- a/src/template.html
+++ b/src/template.html
@@ -37,7 +37,12 @@
   </head>
 
   <body>
+    <!--script>
+      window.document.appVersion = <%= htmlWebpackPlugin.options.appVersion %>;
+    </script -->
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="react-app"></div>   
+    <div id="react-app">
+      <%= htmlWebpackPlugin.options.appVersion %>
+    </div>   
   </body>
 </html>
