--- a/src/template.html
+++ b/src/template.html
@@ -1,48 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta charset="utf-8">
-    <link rel="icon" href="/assets/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="/assets/manifest.json" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/assets/apple-icon.png"
-    />
-    <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
-    />
+    <head>
+        <title><%= htmlWebpackPlugin.options.title %></title>
+        <meta charset="utf-8">
+        <link rel="icon" href="/assets/favicon.ico" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <meta name="theme-color" content="#000000" />
+        <link rel="manifest" href="/assets/manifest.json" />
+        <link
+            rel="apple-touch-icon"
+            sizes="76x76"
+            href="/assets/apple-icon.png"
+        />
+        <!-- link
+        rel="stylesheet"
+        href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css"
+        />
+        <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script -->
+        
+        <!-- link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons" 
+        / -->
+        <!--link
+        rel="stylesheet"
+        href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        /-->
 
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons" 
-    />
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    </head>
 
-  </head>
-
-  <body>
-    <!--script>
-      window.document.appVersion = <%= htmlWebpackPlugin.options.appVersion %>;
-    </script -->
-    <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="react-app">
-      <%= htmlWebpackPlugin.options.appVersion %>
-    </div>   
-  </body>
+    <body>
+        <noscript> You need to enable JavaScript to run this app. </noscript>
+        <div id="react-app"><%= htmlWebpackPlugin.options.appVersion %></div>   
+    </body>
 </html>
